# discord_downloader_rs

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
src/: commands.rs  lib.rs  main.rs
src/handlers/: mod.rs
src/rest/: mod.rs
src/utils/: mod.rs  unregister.rs
