[package]
name = "discord_scraper"
version = "0.1.0"
edition = "2024"

[features]
default = ["bot"]
bot = ["dep:serenity"]
self-bot = ["dep:serenity_self"]

[dependencies]
dotenvy = "0.15.7"
image = "0.25.6"
serenity_self = { version = "0.13.*", optional = true, default-features = false, features = [
  "builder",
  "cache",
  "chrono",
  "client",
  "gateway",
  "model",
  "http",
  "utils",
  "rustls_backend",
] }
serenity = { version = "0.12.*", optional = true, default-features = false, features = [
  "builder",
  "cache",
  "chrono",
  "client",
  "gateway",
  "model",
  "http",
  "utils",
  "rustls_backend",
] }
sqlx = { version = "*", features = [
  "runtime-tokio",
  "sqlite",
  "macros",
  "migrate",
  "json",
  "tls-native-tls",
], default-features = false }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "sync", "signal", "tokio-macros"] }
serde = "1.0.219"
toml = "0.9.5"
tokio-util = "0.7.16"
